# mlops-databricks-opensource-alternative

./: LICENSE  Makefile  README.md  pyproject.toml
text_classification_hf_bert/: docker-compose.yml  extract.py  requirements.txt
